# publicidad-concursal-openclaw

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ACP_PILOT_OK.md  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: raspberry-pi-docker.md
scripts/: db_init.py  load_csv_to_postgres.py  preflight.sh  run_daily.sh  send_alert.sh  smoke_test.sh
src/publicidadconcursal_exporter/: __init__.py  cli.py  config.py  context7_cli.py  context7_client.py  date_utils.py  logging_utils.py  manual_normalize.py  models.py  orchestrator.py
src/publicidadconcursal_exporter/automation/: action_plan.py  base.py  browser_use_runner.py  playwright_runner.py
src/publicidadconcursal_exporter/automation/plans/: search_and_export.md  verify_download.md
src/publicidadconcursal_exporter/db/: __init__.py  csv_mapping.py  domain.py  models.py  repository.py  session.py
src/publicidadconcursal_exporter/parsing/: __init__.py  normalize.py
tests/: test_cli.py  test_context7_cli.py  test_context7_client.py  test_date_utils.py  test_db_csv_mapping.py  test_normalize.py  test_orchestrator.py
